<resources>
    <string name="app_name">Help_Hub</string>

    <!--REGISTRATION ACTIVITY-->
    <string name="registration_header">Registration</string>
    <string name="email_hint">E-mail address</string>
    <string name="password_hint">Password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="registration_button">Sign up</string>
    <string name="have_account_question">Already have an account?</string>
    <string name="go_to_login_text">
        <u>Sign In</u>
    </string>

    <!--REGISTRATION ERRORS-->
    <string name="email_empty_error">The field cannot be empty</string>
    <string name="email_validate_error">Not valid e-mail address</string>
    <string name="email_exists_error">User with the given e-mail already exists</string>
    <string name="password_length_error">Password must contain at least 8 characters</string>
    <string name="password_match_error">Passwords do not match</string>

    <!--LOGIN ACTIVITY-->
    <string name="login_title" translatable="false">Login</string>
    <string name="login_button" translatable="false">Sign In</string>
    <string name="no_account_question" translatable="false">Not registered yet?</string>
    <string name="go_to_registration_text" translatable="false">
        <u>Sign Up</u>
    </string>
    <string name="forgot_password_question" translatable="false">Forgot password?</string>

    <!--LOGIN ERRORS-->
    <string name="login_error" translatable="false">Invalid e-mail address or password</string>

    <!--LOADING DIALOG-->
    <string name="loading_dialog_title">Loading…</string>

    <!--RESET PASSWORD DIALOG-->
    <string name="reset_password_title" translatable="false">Reset password</string>
    <string name="reset_password_message" translatable="false">Enter your e-mail address</string>
    <string name="reset_positive_button" translatable="false">Reset</string>

    <!--CHANGE PASSWORD DIALOG-->
    <string name="change_password_title" translatable="false">Change password</string>
    <string name="change_password_message" translatable="false">Enter your old password</string>
    <string name="change_positive_button" translatable="false">Change</string>

    <!-- NEW USER BASIC INFORMATION ACTIVITY-->
    <string name="new_user_header">Input necessary data</string>
    <string name="new_user_user_name">User name</string>
    <string name="new_user_phone_number">Phone number</string>
    <string name="new_user_city">City</string>

    <!--EMPTY FIELD ERROR-->
    <string name="empty_field_error" translatable="false">The field cannot be empty</string>

    <!-- SAVE AND EDIT BUTTONS-->
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>

    <!-- USER DATA CHANGE-->
    <string name="user_data_change_new_password_button">Change password</string>

    <!--USER PROFILE FRAGMENT-->
    <string name="portfolio_title" translatable="false">
        <u>Portfolio</u>
    </string>
    <string name="add_new_portfolio_photo" translatable="false">Add new photos</string>
    <string name="show_all_portfolio_photos" translatable="false">Show all</string>
    <string name="logout_title" translatable="false">
        <u>Logout</u>
    </string>

    <!--BOTTOM NAVIGATION BAR-->
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_need_help" translatable="false">I need help</string>
    <string name="title_want_to_help" translatable="false">I want to help</string>
    <string name="title_messages" translatable="false">Messages</string>
    <string name="title_user_profile" translatable="false">Profile</string>
    <string name="title_administration_panel" translatable="false">Administration</string>

    <!--ADD OFFER-->
    <string name="add_new_offer_header">Offer help</string>
    <string name="new_offer_title">Title of the offer</string>
    <string name="new_offer_category">Category</string>
    <string name="new_offer_select_category" translatable="false">Select category</string>
    <string name="new_offer_cost" translatable="false">Cost:</string>
    <string name="new_offer_cost_placeholder" translatable="false">0 €</string>
    <string name="new_offer_description_title">Description:</string>
    <string name="new_offer_add_offer_button">Offer</string>
    <string name="new_offer_title_hint" translatable="false">e.g. I will fix your washing machine</string>
    <string name="new_offer_description_hint">Write what you are good at and what you offer.</string>
    <string name="new_offer_currency" translatable="false">PLN</string>

    <!--ADD NOTICE-->
    <string name="add_new_notice_header">Ask for help</string>
    <string name="new_notice_title">Title of the problem</string>
    <string name="new_notice_category">Category</string>
    <string name="new_notice_select_category">Select category</string>
    <string name="new_notice_budget" translatable="false">Budget:</string>
    <string name="new_notice_budget_placeholder" translatable="false">0 €</string>
    <string name="new_notice_description_title">Description:</string>
    <string name="new_notice_add_notice_button">Ask</string>
    <string name="new_notice_title_hint" translatable="false">e.g. Washing machine broken</string>
    <string name="new_notice_description_hint">Write what your problem is. Adding photos is a very good idea. Take this
        opportunity and you will certainly not regret it.
    </string>
    <string name="example_category_title" translatable="false">Example Category Title</string>
    <string name="new_notice_currency" translatable="false">PLN</string>

    <!--NEED HELP DETAILS-->
    <string name="title">Title:</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="budget">Budget:</string>
    <string name="write_button">Write</string>
    <string name="example_user_name" translatable="false">Tomasz Kwasigroch</string>
    <string name="example_user_phone_number" translatable="false">123456789</string>
    <string name="title_placeholder" translatable="false">Title</string>
    <string name="description_placeholder" translatable="false">Description</string>
    <string name="budget_placeholder" translatable="false">Budget</string>

    <!--WANT TO HELP DETAILS-->
    <string name="cost" translatable="false">Cost:</string>
    <string name="cost_placeholder" translatable="false">Cost</string>

    <!--TYPE DIALOG-->
    <string name="need_help_dialog" translatable="false">I NEED HELP</string>
    <string name="want_to_help_dialog" translatable="false">I WANT TO HELP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bookmark" translatable="false">Bookmark</string>

    <string name="added_to_bookmarks" translatable="false">Added to bookmarks</string>
    <string name="removed_from_bookmarks" translatable="false">Removed from bookmarks</string>

    <string name="added_to_observed" translatable="false">Added to observed</string>
    <string name="removed_from_observed" translatable="false">Removed from observed</string>

    <string name="message_hint" translatable="false">Enter your message</string>
    <string name="item_message_box_title_placeholder" translatable="false">Title of the notice or tender</string>
    <string name="item_message_box_user_name_placeholder" translatable="false">Marian Luj</string>
    <string name="search">Search</string>
    <string name="type_something">Type something</string>
    <string name="filters">filters</string>
    <string name="apply">APPLY</string>
    <string name="cancel">CANCEL</string>
    <string name="city">City</string>
    <string name="only_observable">ONLY OBSERVABLE</string>
    <string name="only_my_own">ONLY MY OWN</string>
    <string name="all">ALL</string>
    <string name="example_category">EXAMPLE CATEGORY</string>
    <string name="back">Back</string>
    <string name="assign_as_a_performer">Assign as a performer?</string>
    <string name="yes">Yes</string>
    <string name="assign">assign</string>
    <string name="this_user_assigned_as_the_performer">This user is assigned as the performer.</string>
    <string name="another_performer">You have already assigned another performer.</string>
    <string name="done">Done</string>
    <string name="you_are_assigned_as_the_performer">You are assigned as the performer.</string>
    <string name="performer_assigned">Performer assigned succesfully</string>
    <string name="wait_while_work_confirmed">Please wait while the work is confirmed</string>
    <string name="word_is_done">Work is done!</string>
    <string name="work_is_done">Work is done!</string>
    <string name="accept">Accept</string>
    <string name="send">Send</string>
    <string name="success">Success</string>
    <string name="minimum_rating">Minimum rating is 1</string>
    <string name="optional_comment">Optional comment</string>
    <string name="announcement_closed">Announcement closed</string>
    <string name="performer_selected">The performer has been selected.</string>
    <string name="help_this_person_question">Do you want to help this person?</string>
    <string name="help">Help</string>
    <string name="already_agree_to_help">You have already agreed to help this person.</string>
    <string name="rate_help_level">Please rate the level of help received.</string>
    <string name="rate">Rate</string>
    <string name="already_rate_performer">You have already rated this performer.</string>
    <string name="thank_for_help">Thank you for your help.</string>
    <string name="opinions">opinions</string>
    <string name="cancel_work">The work has been canceled</string>
    <string name="work_canceled_by_performer">Work has been canceled by performer</string>

    <string-array name="orders_filters">
        <item>All</item>
        <item>Only my own</item>
    </string-array>
    <string name="title_activity_fullscreen_image">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="report">Report</string>
    <string name="report_message">Thank you for helping improve our community.</string>
    <string name="_0">0</string>
    <string name="pln">PLN</string>
    <string name="Options">Opcje</string>
    <string name="error">"error: "</string>
    <string name="Updated">Updated</string>
    <string name="forbidden_words_error">\"Your ad contains forbidden words!\"</string>
    <string name="User_created">User created</string>
    <string name="Change_password_link">Link  was sent to your e-mail</string>
    <string name="Reset_password">Reset link sent to your e-mail</string>
    <string name="No_needHelp_offerts">Wow...It looks like you haven\'t asked for help yet</string>
    <string name="delete_confirmation">Are you sure you want to delete this?</string>
    <string name="confirm">Yes</string>
    <string name="decline">No</string>
    <string name="no_wantHelp_offerts">Wow...It looks like you haven\'t offered help yet</string>

    <string-array name="report_causes">
        <item>Inappropriate content.</item>
        <item>Offensive content.</item>
        <item>False information.</item>
        <item>Call for suicide.</item>
        <item>Spam.</item>
        <item>Terrorism.</item>
        <item>Violation of intellectual property rights.</item>
    </string-array>
    
</resources>
