<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registration_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/registration_header"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginHorizontal="10sp"/>
    <EditText
        android:id="@+id/registration_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="5sp"/>
    <EditText
        android:id="@+id/registration_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_hint"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="5sp"/>
    <Button
        android:id="@+id/registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_button"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"/>

</LinearLayout>