<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddTheOfferActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/add_new_notice_exit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_new_notice_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_new_notice_header"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/add_new_notice_exit" />

    <TextView
        android:id="@+id/new_notice_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/new_notice_title"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/add_new_notice_header" />

    <EditText
        android:id="@+id/new_notice_title_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/login_edit_text"
        android:hint="@string/new_notice_title_hint"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_title_text_view" />

    <TextView
        android:id="@+id/new_notice_category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_offer_category"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_title_edit_text" />

    <Button
        android:id="@+id/new_notice_select_category_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/login_form_details_medium"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:paddingLeft="12dp"
        android:text="@string/new_offer_select_category"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_category_text_view" />

    <TextView
        android:id="@+id/new_notice_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_offer_description_title"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_select_category_button" />

    <EditText
        android:id="@+id/new_notice_description_edit_text"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/login_edit_text"
        android:padding="10dp"
        android:hint="@string/new_notice_description_hint"
        android:inputType="textMultiLine"
        android:gravity="top"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_description_text_view" />

    <ImageView
        android:id="@+id/new_offer_add_photos"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/add_a_photo_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/new_notice_description_edit_text" />

    <Button
        android:id="@+id/new_offer_add_offer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/new_notice_add_notice_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />


</androidx.constraintlayout.widget.ConstraintLayout>